--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "clsx": "^2.1.1",
     "modern-normalize": "^2.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.1.0",
+    "react-redux": "^9.1.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
